# EzTaoX

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  index.json  info.json  noxfile.py  pyproject.toml  regressions.json  regressions.xml
.github/ISSUE_TEMPLATE/: 1-bug_report.md
.github/workflows/: smoke-test.yml  testing-and-coverage.yml  tests.yml
_results/: benchmarks.json
_results/gh-runner/: 007275dc-virtualenv-py3.12-Cython-build-packaging-OMP_NUM_THREADS1.json  007275dc-virtualenv-py3.12-Cython-build-packaging.json  01253810-virtualenv-py3.12-Cython-build-packaging-OMP_NUM_THREADS1.json  02ad51dd-virtualenv-py3.12-Cython-build-packaging-OMP_NUM_THREADS1.json  02ad51dd-virtualenv-py3.12-Cython-build-packaging.json  097ead3a-virtualenv-py3.12-Cython-build-packaging-OMP_NUM_THREADS1.json  097ead3a-virtualenv-py3.12-Cython-build-packaging.json  0acf385e-virtualenv-py3.12-Cython-build-packaging-OMP_NUM_THREADS1.json  0acf385e-virtualenv-py3.12-Cython-build-packaging.json  0f431e4f-virtualenv-py3.12-Cython-build-packaging-OMP_NUM_THREADS1.json  1113263d-virtualenv-py3.12-Cython-build-packaging-OMP_NUM_THREADS1.json  1113263d-virtualenv-py3.12-Cython-build-packaging.json  11f2ef6d-virtualenv-py3.12-Cython-build-packaging-OMP_NUM_THREADS1.json  11f2ef6d-virtualenv-py3.12-Cython-build-packaging.json  15a568bc-virtualenv-py3.12-Cython-build-packaging-OMP_NUM_THREADS1.json  15a568bc-virtualenv-py3.12-Cython-build-packaging.json  15b79bbd-virtualenv-py3.12-Cython-build-packaging-OMP_NUM_THREADS1.json  1677ebba-virtualenv-py3.12-Cython-build-packaging-OMP_NUM_THREADS1.json  18f09781-virtualenv-py3.12-Cython-build-packaging-OMP_NUM_THREADS1.json  18f09781-virtualenv-py3.12-Cython-build-packaging.json  1cf362a3-virtualenv-py3.12-Cython-build-packaging-OMP_NUM_THREADS1.json  1cf362a3-virtualenv-py3.12-Cython-build-packaging.json  1d46107d-virtualenv-py3.12-Cython-build-packaging-OMP_NUM_THREADS1.json  1d46107d-virtualenv-py3.12-Cython-build-packaging.json  1efe2bba-virtualenv-py3.12-Cython-build-packaging-OMP_NUM_THREADS1.json  1efe2bba-virtualenv-py3.12-Cython-build-packaging.json  233d37a4-virtualenv-py3.12-Cython-build-packaging-OMP_NUM_THREADS1.json  263b6d77-virtualenv-py3.12-Cython-build-packaging-OMP_NUM_THREADS1.json  263b6d77-virtualenv-py3.12-Cython-build-packaging.json  2b38f2a4-virtualenv-py3.12-Cython-build-packaging-OMP_NUM_THREADS1.json  2b38f2a4-virtualenv-py3.12-Cython-build-packaging.json  2b57c689-virtualenv-py3.12-Cython-build-packaging-OMP_NUM_THREADS1.json  2b57c689-virtualenv-py3.12-Cython-build-packaging.json  2eaef10d-virtualenv-py3.12-Cython-build-packaging-OMP_NUM_THREADS1.json  2eaef10d-virtualenv-py3.12-Cython-build-packaging.json  327f38ca-virtualenv-py3.12-Cython-build-packaging-OMP_NUM_THREADS1.json  327f38ca-virtualenv-py3.12-Cython-build-packaging.json  34289cad-virtualenv-py3.12-Cython-build-packaging-OMP_NUM_THREADS1.json  38079068-virtualenv-py3.12-Cython-build-packaging-OMP_NUM_THREADS1.json  38079068-virtualenv-py3.12-Cython-build-packaging.json  (+170 more)
benchmarks/: asv.conf.json  benchmarks.py  fitting.py  ruff.toml  simulator.py
binder/: environment.yml  index.ipynb
docs/: about.rst  conf.py  index.rst  notebooks.rst  requirements.txt
docs/notebooks/: 01_DRW.ipynb  01_MultibandFitting.ipynb  02_DHO.ipynb  02_Multiband.ipynb  03_DHO.ipynb  03_DRW.ipynb  04_RunFromNested.ipynb
docs/notebooks/data/: lightcurve_thindisk_eztaox_nested.parquet
docs/pre_executed/: 00_Introduction.ipynb  00_Introduction.py  01_MultibandFitting.ipynb  01_MultibandFitting.py  02_DHO.ipynb  02_DHO.py  03_DRW.ipynb  04_RunFromNested.ipynb  05_DP1.ipynb  06_gaia.ipynb  hats_import_vizier.py
docs/pre_executed/data/: lightcurve_deltalag_fixed_nested.parquet  lightcurve_thindisk_fixed_nested.parquet  simulate_delta_lag.ipynb  simulated_thindisk_LC.ipynb
graphs/summary/: fitting.KernelFittingSuite.time_run_exp_fitting.json  fitting.KernelFittingSuite.time_run_m32_fitting.json  simulator.UnivariateSimulatorSuite.time_run_sim.json
src/eztaox/: fitter.py  kernel_stat2.py  models.py  simulator.py  ts_utils.py
src/eztaox/kernels/: direct.py  eqx_utils.py  quasisep.py  transfer_function.py
tests/: conftest.py  ruff.toml  test_kernel_stats.py  test_laguerre_decomposition.py  test_models_quasisep.py
tests/eztaox/: test_kernels_quasisep.py  test_models_quasisep.py  test_packaging.py  test_simulator.py  test_ts_utils.py
tutorials/: Basics.ipynb  Basics.py  CustomPrior.ipynb  CustomPrior.py  DHO.ipynb  DHO.py
