
[project]
name = "eztaox"
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
authors = [
    { name = "Weixiang Yu", email = "astro.flyfish@gmail.com" }
]
description = "EzTaoX is a flexible framework for multi-wavelength and multi-survey AGN light-curve modeling using Gaussian Processes (GPs).  Built on top of tinygp"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
dynamic = ["version"]
requires-python = ">=3.10, <3.13"
dependencies = [
    "tinygp (>=0.3.0,<0.4.0)",
    "jax (<=0.4.31)",
    "jaxlib (<=0.4.31)",
    "jaxopt (>=0.8.3,<0.9.0)",
    "optax (>=0.2.4,<0.3.0)",
    "numpyro (>=0.17.0,<0.20.0)",
]

[project.urls]
"Source Code" = "https://github.com/LSST-AGN-Variability/eztaox"

# On a mac, install optional dependencies with `pip install '.[dev]'` (include the single quotes)
[project.optional-dependencies]
dev = [
    "arviz",
    "asv[virtualenv]==0.6.5", # Used to compute performance benchmarks
    "eztao",
    "celerite",
    "jupyter", # Clears output from Jupyter notebooks
    "pre-commit", # Used to run checks before finalizing a git commit
    "pytest",
    "pytest-cov", # Used to report total code coverage
]

[build-system]
requires = [
    "setuptools>=62", # Used to build and package the Python project
    "setuptools_scm>=6.2", # Gets release version from git. Makes it available programmatically
    # "poetry-core>=2.0.0,<3.0.0"
]
build-backend = "setuptools.build_meta"
# build-backend = "poetry.core.masonry.api"
[tool.setuptools_scm]
write_to = "src/eztaox/_version.py"

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.9"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"
pre-commit = "^3.5.0"
ruff = "^0.2.1"
matplotlib = "^3.3.0"
arviz = "^0.20.0"
ipywidgets = "^8.1.5"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-cov = "^6.0.0"
nox = "^2025.0.0"
nox-poetry = "^1.2.0"
celerite = "^0.4.0"
eztao = {git = "https://github.com/ywx649999311/EzTao.git"}


[tool.poetry.group.docs.dependencies]
toml = "^0.10.2"
Sphinx = "^8.0.0"
nbsphinx = "^0.9.0"
sphinx-copybutton = "^0.5.2"

[tool.jupytext]
formats = "ipynb,py:percent"
notebook_metadata_filter="-all"

[tool.pytest.ini_options]
testpaths = [
    "tests",
    "src",
]
addopts = "--doctest-modules --doctest-glob=*.rst"

[tool.coverage.run]
omit=["src/eztaox/_version.py"]

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", 'I', 'W', 'UP']
ignore = [
    "E741",    # Allow ambiguous variable names
    "PLR0911", # Allow many return statements
    "PLR0913", # Allow many arguments to functions
    "PLR0915", # Allow many statements
    "PLR2004", # Allow magic numbers in comparisons
]
exclude = ["tutorials/"]